--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1",
   "description": "",
   "author": "",
-  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:hmr": "node dist/main",
+    "start:dev": "ts-node -r tsconfig-paths/register src/main.ts",
+    "_start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "tslint -p tsconfig.json -c tslint.json",
@@ -17,15 +18,45 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:generate": "ts-node node_modules/typeorm/cli.js migration:generate -f ormconfig -d src/migrations -n",
+    "migration:revert": "ts-node node_modules/typeorm/cli.js migration:revert -f ormconfig",
+    "migration:create": "ts-node node_modules/typeorm/cli.js migration:create -f ormconfig -d src/migrations -n"
   },
   "dependencies": {
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
+    "@nestjs/graphql": "^6.5.4",
+    "@nestjs/jwt": "^6.1.1",
+    "@nestjs/microservices": "^6.11.7",
+    "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/swagger": "^4.2.7",
+    "@nestjs/typeorm": "^6.3.1",
+    "bcrypt": "^3.0.8",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
+    "compression": "^1.7.4",
+    "dotenv": "^8.2.0",
+    "express-graphql": "^0.9.0",
+    "express-rate-limit": "^5.0.0",
+    "graphql": "^14.6.0",
+    "graphql-tools": "^4.0.6",
+    "helmet": "^3.21.2",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "pg": "^7.18.1",
     "reflect-metadata": "^0.1.13",
+    "request-context": "~2.0.0",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "source-map-support": "^0.5.16",
+    "swagger-ui-express": "^4.1.3",
+    "typeorm": "^0.2.22",
+    "typeorm-transactional-cls-hooked": "^0.1.11",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
@@ -58,5 +89,12 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
