--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "scripts": {
         "postinstall": "tsc -p tsconfig.build.json",
         "build": "tsc -p tsconfig.build.json",
+        "localbuild": "tsc -p tsconfig.build.json",
+        "postlocalbuild": "node dist/main",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
         "start:hmr": "node dist/main",
@@ -30,8 +32,9 @@
         "@nestjs/microservices": "^6.11.7",
         "@nestjs/passport": "^6.1.1",
         "@nestjs/platform-express": "^6.7.2",
-        "@nestjs/swagger": "^4.2.7",
+        "@nestjs/swagger": "^4.2.8",
         "@nestjs/typeorm": "^6.3.1",
+        "apollo-server-express": "^2.10.0",
         "bcrypt": "^3.0.8",
         "bcryptjs": "^2.4.3",
         "class-transformer": "^0.2.3",
@@ -48,12 +51,14 @@
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "pg": "^7.18.1",
+        "pg-promise": "^10.4.3",
         "reflect-metadata": "^0.1.13",
         "request-context": "~2.0.0",
         "rimraf": "^3.0.0",
         "rxjs": "^6.5.3",
         "source-map-support": "^0.5.16",
         "swagger-ui-express": "^4.1.3",
+        "type-graphql": "^0.17.6",
         "typeorm": "^0.2.22",
         "typeorm-transactional-cls-hooked": "^0.1.11",
         "uuid": "^3.4.0"
